Make sure that .site-feature .lead font size remains 21px on smaller screens

--- a/styles/site.css
+++ b/styles/site.css
@@ -192,6 +192,12 @@ code {
   padding: 80px 0;
 }
 
+@media (max-width: 767px) {
+  .site-feature .lead {
+    font-size: 21px;
+  }
+}
+
 .site-feature .post-date {
   color: #999;
 }
